# surgical_robotics_challenge

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  launch.yaml  run_environment.sh  run_environment2.sh  run_environment_3d_med.sh  todo.md
ADF/: 3dMed_phantom_with_thread.yaml  psm1.yaml  psm2.yaml
ADF/world/: world_stereo.yaml
blender_scripts/: psm_joint_control_example.py  scale_blender_objects.py  scale_empty_objects.py
challenge1_scripts/: Challenge1Solution.py  README.md
challenge1_scripts/circle_estimation_scripts/: estimate_ellipse_parameters.py
challenge1_scripts/data/: 1636346692105409376.txt
challenge1_scripts/examples/: Sift_features.py  collect_segmentation_dataset.py  get_ecm_data.py  hsv_segmentation.py  test_ellipse_estimators.ipynb
challenge1_scripts/image_processing/: img_processing_pipe.ipynb
challenge1_scripts/tests/: test_loading_scripts.py
juan-scripts/: Challenge1Solution.py  circle0.txt  circle1.txt  config.rviz  ellipse_coefficients.txt  estimate_ellipse_3D_pose.py  estimate_ellipse_parameters.py  estimate_ellipse_parameters_1.py  estimate_from_segmentation_mask.py  estimate_needle_pose.py  estimate_needle_pose_offline.py  estimate_needle_pose_online.py  get-needle-pose.py  project_needle_center.py  project_needle_center_online.py  project_needle_pts_offline.py  project_needle_pts_online.py  sample_ellipse_01.txt  save_image.py  stereo_estimation.py
juan-scripts/StereoVision/: choose_circle_from_stereo.py  stereo_estimation.py  stereo_triangulation_complete.py  stereo_triangulation_simple.py  tailtip_detection.py
juan-scripts/circle_estimation_scripts/: project_needle_pts_online.py
scripts/: setup.py
solution-scripts/: README.md  requirements.txt  setup.py
to_erase/: save_image.py  test_camera_frame.py  test_camera_frame2.py
(+108 files in other folders)
